feat: testing release deployments

--- a/db-scripts/app-release-1.0.1/Makefile
+++ b/db-scripts/app-release-1.0.1/Makefile
@@ -11,9 +11,8 @@ all: post-deploy
 
 # Run post-deployment scripts
 post-deploy:
-	@echo ">>> Waiting 180 seconds before starting deployment..."
-	@sleep 180
-	@echo "Running post-deploy scripts..."
+
+	@echo "Running DB-deploy scripts..."
 	@$(SQLCMD) -d $(DB_NAME) -i create_dummy_table.sql
 	@$(SQLCMD) -d $(DB_NAME) -i insert_data_dummy_table.sql	
 	@echo "DB-deploy scripts completed."
